# campfire

./: spec.yaml
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
server/.cargo/: config.toml
server/database/: Cargo.toml  sqlx-data.json
server/database/src/: lib.rs  password.rs  prelude.rs  snowflake.rs  time.rs  validation.rs
server/database/src/orm/: access_token.rs  channel.rs  guild.rs  message.rs  mod.rs  user.rs
server/migrations/: 20230412062653_init.sql  20230416061321_next-to-order.sql
server/server/: Cargo.toml
server/server/src/: logger.rs  macros.rs  main.rs  prelude.rs
server/server/src/api/: authentication.rs  mod.rs  result.rs
server/server/src/api/account/: login.rs  register.rs
server/server/src/api/channel/: create.rs
server/server/src/api/guild/: create.rs  get_joined.rs  mod.rs
server/server/src/api/message/: get.rs  send.rs
server/server/src/v1/: authentication.rs  mod.rs  prelude.rs
server/server/src/v1/account/: login.rs  mod.rs  register.rs
server/server/src/v1/guild/: create.rs  mod.rs
server/src/: main.rs  prelude.rs
server/src/database/: mod.rs  password.rs  snowflake.rs
server/src/v1/: mod.rs
server/src/v1/account/: mod.rs  register.rs
web/: .env.example  .eslintrc.cjs  .prettierrc  package.json  svelte.config.js  tailwind.config.cjs
web/src/: app.css
web/src/components/: UserInfo.svelte
web/src/i18n/: index.ts
web/src/i18n/lang/: en.ts  uwu.ts
web/src/routes/: +layout.svelte
web/src/routes/(app)/: +layout.svelte  +page.svelte
web/src/routes/(app)/channel/[guild]/[channel]/: +page.svelte
web/src/routes/(auth)/login/: +page.svelte
web/src/routes/(auth)/register/: +page.svelte
web/src/routes/channel/[guild]/[channel]/: +page.svelte
web/src/sdk/: functions.ts  index.ts  req.ts  types.ts
web/src/sdk/account/: login.ts  register.ts
web/src/sdk/channel/: create.ts
web/src/sdk/guild/: get_joined.ts  index.ts
web/src/sdk/message/: get.ts  index.ts  send.ts
web/src/state/: index.ts
web/src/utils/: date.ts
web/static/fonts/Sigmar/: OFL.txt
