[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
thiserror = "1.0.40"
tokio = "1.27.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.dev]
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3
