[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
thiserror = "1.0.40"
tracing = "0.1.37"
