[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
actix-web = "4.3.1"
argon2 = "0.5.0"
base64 = "0.21.0"
dotenvy = "0.15.7"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
de-ref = "1.0.0"
tokio = { version = "1.27.0", features = ["sync"] }
regex = "1.7.3"
pin-project-lite = "0.2.9"
futures-core = "0.3.28"
bytes = "1.4.0"
time = "0.3.20"
