[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
argon2 = "0.5.0"
base64 = "0.21.0"
dotenvy = "0.15.7"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
de-ref = "1.0.0"
tokio = { version = "1.27.0", features = ["sync"] }
regex = "1.7.3"
pin-project-lite = "0.2.9"
futures-core = "0.3.28"
bytes = "1.4.0"
time = "0.3.20"
actix-cors = "0.6.4"

# TODO: Look into adding compression in production but not development
# `zstd` increases compile times because it has a build script (has bindings to C i think)
[dependencies.actix-web]
version = "4.3.1"
features = ["macros", "rustls", "cookies"]
default-features = false
